# k8s-demo-stuff

./: .gitignore  Dockerfile  LICENSE  README.md  cbp-demo-deploy.yaml  dockerSecret.sh  pv-claim.yaml  pv-volume.yaml  tkg-cluster-ms.yaml  tkg-cluster.yaml  tkgs-v1-18-5-ms.yaml  tmc-registration.yaml
buildservice-install/: tap-values.yaml
builservice-install/: 01_tbs-env.sh  02_tanzu-reg-cred.sh  tap-values.yaml
clusterYamls/: .clu_old.yaml.swp  clu-lab.yaml  clu.yaml  cluster.yaml  funcs.star  new_clu_ytt.yml  schema.yml
configYamls/: istio-gw.yaml  pv-claim.yaml  pv-claim2.yaml  pv-volume.yaml  tmc-conoaSC.yaml  tmc-registration.yaml
contour/: 01_package-repo.yaml  02_contour.yaml  03_httpbinApp.yaml  04_nginxApp.yaml  05_patchIngressClass.txt  06_activateIngress.txt  ingressMulti.yaml
demoApps/: cnbp-demo-deploy.yaml  cnbp-demo-svc.yaml  ctx-spring-music.yaml  hello-tele2-deploy.yaml  hello-tele2-svc.yaml  rmq_receive.py  rmq_send.py  spring-music.yaml  tbsDemoCommands.md  web-store.yaml
gitOps/: 01_gitLabAgentInstall.sh  02_nginxInstall.sh  README.txt  nginxIngressNs.yaml
makeFiles/: Makefile  Makefile.env  clu.yaml  ld_yaml.py  mc.py  nodes.yaml  requirements.txt  test-load.py  test-yaml-li.py  test.py  tkc-chngname-dev.py  tkc-chngname.py  tkr.txt  vmcl-parser.py  vmcl_parser.py  vmclass.txt  yaml.py
podSecurityTest/: busyBox.yaml  busyBox_2.yaml
portworx/: stork-spec.yaml
postgres/: 01_pg-ns.yaml  02_pgSecret.sh  03_installPgOperator.sh  04_installPgOperator.sh  05_pg-instance.yaml  (+1 more)
pythonStuff/gptTranslate/: main.py  pyproject.toml
(+64 files in other folders)
