[tool.poetry]
name = "gpttranslate"
version = "0.1.0"
description = "a gpt api for translation"
authors = ["charliechocho <mattiassoderberj@gmail.com>"]
license = "OSI"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.104.1"
openai = "^1.3.7"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
